# accessible_transport

./: .gitignore  README.md  docker-compose.yaml
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  employee-new.json  pyproject.toml  r.json  setup.cfg
backend/.temp/: postgresql.conf  postmaster.pid
backend/.temp/base/1/: 1255  1259  13443  13448  2618  2619  2619_vm  2658  2673  2675  2684  2696  2840  2841  3395  3605  3609  3766  3767  pg_internal.init
backend/.temp/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13439  13439_fsm  13439_vm  13443  (+292 more)
backend/.temp/global/: 1260  1262  2396  2671  2672  pg_control  pg_internal.init
backend/.temp/pg_xact/: 0000
backend/administration/: admin.py  apps.py  models.py
backend/config/: settings.py  urls.py
backend/employee/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/metro/: admin.py  apps.py  models.py  serializers.py  shortest_path.py  urls.py  views.py
backend/metro/tmp/: metro_stations.json  time_between_stations.json  transfer_time.json
backend/passenger/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/requests/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/tmp/: allbase.json  employee.json  employee_generator.py  employeefor48.json  employees.py  metro.json  newreq.py  passenger.json  passenger_generator.py  q.py  request.py  requests.json  requests48.json  requests_generator.py  requests_new.json  script.py
(+110 files in other folders)
